# columbus-technology-institute

./: .gitignore  AGENTS.md  DESIGN.md  index.html  random-number-bench.html  research.html  script.js  styles.css
random-number-bench/: .gitignore  README.md  pyproject.toml
random-number-bench/benchmark/: __main__.py  results.py  runner.py
random-number-bench/docs/: index.html  results.json
random-number-bench/tests/: test_results.py  test_runner.py
scripts/: generate_mark.py  process_logo.py
specs/: specs_number_guessing_bench.md
